# SLAP

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  main.py  pybind_test.cpp  requirements.txt  setup.py  viewer.py
configs/: freiburg_main_config.json  main_config.json  video_main_config.json
notebooks/: test.ipynb
src/: example.cpp  main.cpp  visual_slam3d.h
src/slap/: 3d_visualization.py  bundle_adjuster.py  g2o_optimizer.py  map.py  point.py  slam.py  torch_optimizer.py  video.py  view.py  visualizer.py
src/slap/utils/: data_utils.py  utils.py
